--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
-    "test": "wtr **/*.spec.js --node-resolve"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -26,9 +26,9 @@
   },
   "homepage": "https://github.com/terodox/optimized-resize-observer#readme",
   "devDependencies": {
-    "local-web-server": "5.1.1",
+    "jsdom": "19.0.0",
     "tsc": "2.0.4",
-    "typescript": "4.5.4",
-    "vite": "2.8.4"
+    "vite": "2.8.4",
+    "vitest": "0.5.0"
   }
 }
