--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
       "strict": true,
       "sourceMap": true,
       "declaration": true,
-    }
+    },
+    "exclude": [
+        "**/*.spec.ts"
+    ]
 }
